--- a/view/editProfilePage.ejs
+++ b/view/editProfilePage.ejs
@@ -10,6 +10,7 @@
     method="POST"
     enctype="multipart/form-data"
   >
+  <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
     <div class="max-w-lg mx-auto mt-4">
       <%- include('includes/flash') %>
       <!-- MANDATORY FIELDS -->
