--- a/view/loginPage.ejs
+++ b/view/loginPage.ejs
@@ -50,6 +50,7 @@
         <div class="mt-6">
           <form action="/login" method="POST" class="space-y-6">
             <%- include('includes/flash') %>
+            <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
             <div>
               <label for="email" class="block text-sm font-medium text-gray-700">Email address</label>
               <div class="mt-1">
@@ -76,7 +77,7 @@
             </div>
 
             <div>
-              <button type="submit" class="flex w-full justify-center rounded-md border border-transparent bg-green-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">Sign in</button>
+              <button type="submit" class="flex w-full justify-center rounded-md border bg-green-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">Sign in</button>
             </div>
           </form>
         </div>
