--- a/view/registrationPage.ejs
+++ b/view/registrationPage.ejs
@@ -52,7 +52,7 @@
             <% reqErrors.forEach(function(message){ %>
             <div class="border border-red-400 text-red-700 text-center px-4 py-3 rounded"><%= message %></div>
             <% }) %>
-
+            <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
             <div class="relative">
               <label for="first-name" class="block text-sm font-medium text-gray-700">First name</label>
               <div class="mt-1">
@@ -96,7 +96,7 @@
             </div>
 
             <div>
-              <button type="submit" class="flex w-full justify-center rounded-md border border-transparent bg-green-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">Yes Create New Account</button>
+              <button type="submit" class="flex w-full justify-center rounded-md border bg-green-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">Yes Create New Account</button>
             </div>
           </form>
         </div>
