--- a/view/resetPasswordPage.ejs
+++ b/view/resetPasswordPage.ejs
@@ -14,6 +14,8 @@
       <div class="mt-8">
         <div class="mt-6">
           <form action="/reset-password" method="POST" class="space-y-6">
+            <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
+
             <%- include('includes/flash') %>
             <div>
               <label for="reset_password_email" class="block text-sm font-medium text-gray-700">Email address</label>
@@ -22,7 +24,7 @@
               </div>
             </div>
 
-            <button type="submit" class="flex w-full justify-center rounded-md border border-transparent bg-green-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">Send Me a Reset Token</button>
+            <button type="submit" class="flex w-full justify-center rounded-md border bg-green-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">Send Me a Reset Token</button>
           </form>
         </div>
       </div>
