--- a/view/resetTokenPage.ejs
+++ b/view/resetTokenPage.ejs
@@ -14,6 +14,7 @@
       <div class="mt-8">
         <div class="mt-6">
           <form action="/reset-password/<%= token %>" method="POST" class="space-y-6">
+            <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
             <%- include('includes/flash') %>
             <div>
               <label for="new_password" class="block text-sm font-medium text-gray-700">New password</label>
@@ -29,7 +30,7 @@
               </div>
             </div>
 
-            <button type="submit" class="flex w-full justify-center rounded-md border border-transparent bg-green-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">Change Password</button>
+            <button type="submit" class="flex w-full justify-center rounded-md border bg-green-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">Change Password</button>
           </form>
         </div>
       </div>
